fixed animation stretching mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -126,7 +126,7 @@ section {
 
 @keyframes slide-in-left {
   0% {
-    transform: translateX(-100px);
+    transform: translateX(-50px);
     opacity: 0;
   }
   100% {
@@ -140,7 +140,7 @@ section {
     opacity: 1;
   }
   100% {
-    transform: translateX(100px);
+    transform: translateX(50px);
     opacity: 0;
   }
 }
